Add Firebase, lodash and dotenv depedencies

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "firebase": "^7.17.2",
+    "lodash": "^4.17.19",
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
